# TreasureDeckApi/routes/api.php
@@ -12,8 +12,11 @@ use App\Http\Controllers\v2\RoleController;
 use App\Http\Controllers\v2\UserCardController;
 use App\Http\Controllers\v2\UserController;
 use App\Http\Controllers\VerificationController;
+use App\Models\User;
+use Illuminate\Foundation\Auth\EmailVerificationRequest;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use Illuminate\Support\Facades\URL;
 
 /*
 |--------------------------------------------------------------------------
@@ -27,17 +30,17 @@ use Illuminate\Support\Facades\Route;
 */
 
 
-Route::prefix('v2')->middleware('auth:sanctum')->group(function () {
+Route::prefix('v2')->middleware('auth:api')->group(function () {
 
 Route::apiResource('cards', CardController::class);
 Route::apiResource('cardsVersion', CardVersionController::class);
 Route::apiResource('deckCards', DeckCardController::class);
 Route::apiResource('decks', DeckController::class);
-Route::apiResource('deckStats', DeckStatController::class);
 Route::apiResource('expansions', ExpansionController::class);
 Route::apiResource('role', RoleController::class);
 Route::apiResource('userCards', UserCardController::class);
 Route::apiResource('users', UserController::class);
+Route::delete('/deckCards/byDeck/{deck_id}', [DeckCardController::class, 'destroyByDeck']);
 
 });
 
@@ -46,6 +49,22 @@ Route::post('register', [AuthApiController::class, 'register']);
 Route::post('login', [AuthApiController::class, 'login']);
 
 
-Route::get('email/verify/{id}/{hash}', function ($id, $hash) {
-    return 'Verificación';
+
+
+Route::get('/verify/{id}/{hash}', function ($id, $hash, Request $request) {
+    $user = User::findOrFail($id);
+
+    if (! hash_equals((string) $hash, sha1($user->email))) {
+        abort(403, 'Hash no válido');
+    }
+
+    if (! URL::hasValidSignature(request())) {
+        abort(403, 'Enlace expirado o inválido');
+    }
+
+    if (! $user->hasVerifiedEmail()) {
+        $user->markEmailAsVerified();
+    }
+
+    return response('Correo verificado correctamente');
 })->name('verification.verify');
